bdr.BDR2.scala.error
Erreur de compilation :
BDR2:6: error: ';' expected but ',' found.
 case "I" => droite();droite(),avance()
                              ^